# introduction-to-fastapi-and-celery

./: .gitignore  404.html  LICENSE  README.md  extra.css  index.html  mkdocs.yml  notebook.ipynb  poetry.toml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-site.yaml
01-poetry/: index.html
02-fastapi/: index.html
03-celery/: index.html
04-notebook/: index.html
05-more/: index.html
docs/: 01-poetry.md  02-fastapi.md  03-celery.md  04-notebook.md  05-more.md  index.md
fastapi_celery/: main.py  task.py
search/: search_index.json
