[tool.poetry]
name = "fastapi-celery"
version = "0.1.0"
description = ""
authors = ["Lucy Linder <lucy.derlin@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_celery"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["uvicorn"], version = "^0.95"}
uvicorn = "^0.21.1"
pydantic = "^1.10.6"
celery = {extras = ["redis"], version = "^5.2"}
watchdog = "^3.0.0"
ruff = "*"

[tool.poetry.group.dev.dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
